--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
   padding: 5rem 3rem;
   text-align: center;
   text-rendering: optimizeLegibility;
-  color: #136313;
-  background-color: #e7e5e4;
+  color: #181363;
+  background-color: #11c211;
   letter-spacing: .15em;
 }
 
